--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 		<meta name="mobile-web-app-capable" content="yes">
 		
 		<meta property="og:title" content="Home">
-		<meta property="og:url" content="https://pnrtscr.com">
+		<meta property="og:url" content="https://lewis.com">
 		<meta property="og:site_name" content="screamshot">
 		<meta property="og:image" content="https://pnrtscr.com/resources/images/logo.png">
-		<meta property="og:description" content="Generate a fake but convincing screenshot link to scare users online.">
+		<meta property="og:description" content="Generate a fake but convincing screenshot l">
 		<meta property="og:type" content="website">
 		
 		<meta name="msapplication-tooltip" content="screamshot">
@@ -114,10 +114,10 @@
 		$(document).ready(function( ) {
 			new ClipboardJS(".copy");
 			
-			$("input").val( "https://pnrtscr.com/" + Math.random( ).toString(36).substr(2, 6) );
+			$("input").val( "https://lewis.com/" + Math.random( ).toString(36).substr(2, 6) );
 			
 			$(document).on("click", ".generate", function( ) {
-				$("input").val( "https://pnrtscr.com/" + Math.random( ).toString(36).substr(2, 6) );
+				$("input").val( "https://lewis.com/" + Math.random( ).toString(36).substr(2, 6) );
 			});
 		});
 		</script>
